kube_deploy/www-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: www
  name: www
  namespace: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: www
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/default: "true"
        io.kompose.service: www
    spec:
      containers:
        - env:
            - name: APP_DEBUG
              value: "true"
            - name: APP_ENV
              value: local
            - name: APP_KEY
              value: 'base64:JUXTsCKQubRlvxGv6sVwkFL2rJ/gSksD4B/68948Mww:'
            - name: APP_NAME
              value: Laravel
            - name: APP_URL
              value: http://vapi.test
            - name: AWS_DEFAULT_REGION
              value: us-east-1
            - name: AWS_USE_PATH_STYLE_ENDPOINT
              value: "false"
            - name: BROADCAST_DRIVER
              value: log
            - name: CACHE_DRIVER
              value: file
            - name: DB_CONNECTION
              value: mysql
            - name: DB_DATABASE
              value: vapi
            - name: DB_HOST
              value: db
            - name: DB_PASSWORD
              value: vapi123456
            - name: DB_PORT
              value: "3306"
            - name: DB_USERNAME
              value: root
            - name: FILESYSTEM_DRIVER
              value: local
            - name: LOG_CHANNEL
              value: errorlog
            - name: LOG_LEVEL
              value: debug
            - name: MAIL_ENCRYPTION
            - name: MAIL_FROM_ADDRESS
            - name: MAIL_FROM_NAME
            - name: MAIL_HOST
              value: mailhog
            - name: MAIL_MAILER
              value: smtp
            - name: MAIL_PASSWORD
            - name: MAIL_PORT
              value: "1025"
            - name: MAIL_USERNAME
            - name: MEMCACHED_HOST
              value: 127.0.0.1
            - name: MIX_PUSHER_APP_CLUSTER
            - name: MIX_PUSHER_APP_KEY
            - name: PUSHER_APP_CLUSTER
              value: mt1
            - name: QUEUE_CONNECTION
              value: sync
            - name: REDIS_HOST
              value: 127.0.0.1
            - name: REDIS_PASSWORD
            - name: REDIS_PORT
              value: "6379"
            - name: SERVER_PORT
              value: "80"
            - name: SESSION_DRIVER
              value: file
            - name: SESSION_LIFETIME
              value: "120"
          image: 384503189380.dkr.ecr.eu-west-1.amazonaws.com/shay-repo:vapi_www
          name: www
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html/vapi
              name: www-claim0
          #command: [ "/bin/bash", "-c", "--" ]
          #args: [ "while true; do sleep 30; done;" ]
      restartPolicy: Always
      volumes:
        - name: www-claim0
          persistentVolumeClaim:
            claimName: www-claim0
status: {}
